# federated_learning

./: .gitignore  Centralized_MNIST.ipynb  Federated_Learning_CIFAR10.ipynb  Federated_Learning_MNIST.ipynb  GA_Federated_Learning_MNIST_q=1.ipynb  GA_Federated_Learning_MNIST_q=10.ipynb  GA_Federated_Learning_MNIST_q=2.ipynb  GA_Federated_Learning_MNIST_q=5.ipynb  GA_Federated_Learning_MNIST_q_plot.ipynb  MNIST_central.ipynb  MNIST_plots.ipynb  corrected_GA_Federated_Learning_MNIST_q=10.ipynb  corrected_GA_Federated_Learning_MNIST_q=5.ipynb  fl-ga-cifar-10-q-1000.ipynb  pyproject.toml
Centralized_CIFAR-10/: Centralized_CIFAR-10.ipynb  Centralized_CIFAR-10_GA.ipynb  Centralized_CIFAR-10_with_GA_and_Normalization-bidirectional.ipynb  Centralized_CIFAR-10_with_GA_and_Normalization-unidirectional.ipynb
Centralized_MNIST/: Centralized_MNIST.ipynb  Centralized_MNIST_GA.ipynb  Centralized_MNIST_Multiple_Qs.ipynb  Centralized_MNIST_with_GA.ipynb  Centralized_MNIST_with_GA_and_Normalization.ipynb  Centralized_MNIST_with_GA_and_Normalization_bidirectional.ipynb  Visualize.ipynb
Federated_MNIST/: Federated_MNIST.ipynb
